<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla"
        android:text="@string/header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        app:srcCompat="@drawable/_4ae8def288851503cf68340df174963" />

    <TextView
        android:id="@+id/textViewHobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/karla"
        android:gravity="center"
        android:text="@string/hobby"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLocation1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/location1"
        app:backgroundTint="#004D40" />

    <Button
        android:id="@+id/btnLocation2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/location2"
        app:backgroundTint="#00695C" />

    <Button
        android:id="@+id/btnLocation3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/location3"
        app:backgroundTint="#00796B" />

    <Button
        android:id="@+id/btnLocation4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/location4"
        app:backgroundTint="#00897B" />

    <Button
        android:id="@+id/btnLocation5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/location5"
        app:backgroundTint="#009688" />

    <Button
        android:id="@+id/btnLocation6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/location6"
        app:backgroundTint="#26A69A" />
</LinearLayout>